// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateArticleReplyStatus should not allow users to delete other's article replies 1`] = `
Array [
  [GraphQLError: Cannot change status for articleReply(articleId=others, replyId=others)],
]
`;

exports[`UpdateArticleReplyStatus should set article reply fields correctly 1`] = `
Object {
  "deleted": Array [
    Object {
      "status": "NORMAL",
      "updatedAt": "2017-01-28T08:45:57.011Z",
    },
  ],
  "normal": Array [
    Object {
      "status": "DELETED",
      "updatedAt": "2017-01-28T08:45:57.011Z",
    },
  ],
}
`;

exports[`UpdateArticleReplyStatus should set article reply fields correctly 2`] = `
Array [
  Object {
    "appId": "test",
    "replyId": "reply",
    "status": "DELETED",
    "updatedAt": "2017-01-28T08:45:57.011Z",
    "userId": "foo",
  },
]
`;

exports[`UpdateArticleReplyStatus should set article reply fields correctly 3`] = `
Array [
  Object {
    "appId": "test",
    "replyId": "reply",
    "status": "NORMAL",
    "updatedAt": "2017-01-28T08:45:57.011Z",
    "userId": "foo",
  },
]
`;
